# brin-hotspot-new

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.modis-converter  LICENSE  README.md  TODO.md  docker-compose.yml  pyproject.toml
data/reference/: provinces.geojson
db/init/: 001-create-raster-db.sql  002-hotspot-schema.sql  003-raster-schema.sql
db/migrations/: 001-hotspot-core.sql  002-operational-indexes.sql  003-raster-operational-indexes.sql  004-source-file-identity.sql  005-rename-tera-spelling.sql
docs/: api-reference.md  backend.md  enhancement-plan.md  frontend.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  main.tsx  mockData.ts  styles.css  types.ts
src/brin_hotspot/: __init__.py  cli.py  config.py  db.py  domain.py  logging_config.py  migrations.py  raster.py  worker.py
src/brin_hotspot/api/: __init__.py  app.py  repository.py  schemas.py
src/brin_hotspot/ingestion/: __init__.py  clustering.py  csv_export.py  hotspot.py  landsat8.py  modis.py  noaa20.py  snpp.py  sources.py  viirs.py
src/brin_hotspot/repositories/: geo_repository.py  hotspot_repository.py  operations_repository.py  raster_repository.py  (+1 more)
tests/: test_api.py  test_clustering.py  test_config.py  test_geo_repository.py  test_landsat8_ingestion.py  test_migrations.py  test_modis_converter.py  test_modis_ingestion.py  test_noaa20_ingestion.py  test_raster.py  test_reference_repository.py  test_snpp_ingestion.py  test_snpp_parser.py  test_worker.py
tools/modis_converter/: convert_modis_hdf.py
(+12 files in other folders)
